# fastsg

./: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac
examples/: Makefile.am  Makefile.in  Test1.cpp  Test2.cpp
serial/: Converter.cpp  Converter.h  DataStructure.h  Function.h  Helper.cpp  Helper.h  SparseGrid.cpp  SparseGrid.h
src/: Converter.cpp  Converter.h  DataStructure.h  Function.h  Helper.cpp  Helper.h  Makefile.am  Makefile.in  SparseGrid.cpp  SparseGrid.h
tests/: Test1.cpp
utils/: dyn_prog.c
